# modern-python-project

./: LICENSE  README.md  pyproject.toml
src/modern_python_project/: console.py  wikipedia.py
tests/: test_console.py  test_wikipedia.py
