[tool.poetry]
name = "modern-python-project"
version = "0.1.0"
description = "The modern Python project template"
license = "MIT"
homepage = "https://github.com/etoulas/modern-python-project"
repository = "https://github.com/etoulas/modern-python-project"
keywords = ["python", "template"]
authors = ["Efthimios Toulas <efthimios.toulas@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
modern-python-project = "modern_python_project.console:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
