[tool.poetry]
name = "modern-python-project"
version = "0.1.0"
description = "The modern Python project template"
license = "MIT"
homepage = "https://github.com/etoulas/modern-python-project"
repository = "https://github.com/etoulas/modern-python-project"
keywords = ["python", "template"]
authors = ["Efthimios Toulas <efthimios.toulas@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]
pytest = "^5.4.2"
coverage = {extras = ["toml"], version = "^5.1"}
pytest-cov = "^2.9.0"
pytest-mock = "^3.1.0"

[tool.poetry.scripts]
modern-python-project = "modern_python_project.console:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["modern_python_project"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
